--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ fvcore==0.1.5.post20221221
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.67.1
+h11==0.14.0
 h5py==3.12.1
 hydra-core==1.3.2
 idna==3.10
@@ -79,6 +80,7 @@ tqdm==4.67.0
 typing_extensions==4.9.0
 tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.32.0
 Werkzeug==3.1.2
 wheel==0.44.0
 wrapt==1.16.0
